public/stylesheets/screen.css
/* Global Stucture */
/************************************************************************/
body {
  background: #3e4649 url("../images/background.jpg") top left repeat;
  color: #222;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#wrapper {
  height: 100%;
  margin-left: 175px;
}

body.sessions #wrapper,
body.clearance-passwords #wrapper,
body.users-new #wrapper {
  margin: 0;
}

#header {
  background: rgb(35, 41, 44); /* The Fallback */
  background: rgba(11, 12, 14, 0.25);
  height: 50px;
  width: 100%;
  padding: 0;
  position:relative;
}

#header h1 {
  color:white;
  padding:15px 45px;
}

#header #master_tree_title_input {
  font-size: 14px;
  margin: 9px 0 0 40px;
  padding: 3px;
  width: 20%;
}

#header span {
  color: #fff;
  margin: 0 0 0 10px;
}

#header span.error {
  color: #d10000;
}

#fluid-head {
  color: rgb(236, 234, 226);
  height: 27px;
  margin: 0 0 0 30px;
  width: 100%;
}

h1 {
  font-size: 1.5em;
  padding: 10px 0px;
}

h2 {
  font-size: 1.25em;
  padding: 6px 0px;
}

hr {
  background: #31373b;
  border: none;
  border-bottom: 1px solid #343a3f;
  height: 1px;
  margin: 15px 0px;
  width: 100%;
}

/* Body Content */
/************************************************************************/
#content {
  height: 100%;
  min-height: 800px;
  min-width: 1050px;
}

#bodywrap {
  color: black;
  margin: 20px 30px;
}

.infobox-wrap {
  background-color: #EEF1F3;
  float: left;
  margin: 10px 0px;
  width: 600px;
}

.infobox-wrap .title {
  background: #eceae2;
  background: -moz-linear-gradient(center bottom, rgb(184,184,184), rgb(220, 222, 222));
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(236, 234, 226)), to(rgb(206, 203, 188)));
  border-radius: 8px 8px 0 0;
  -moz-border-radius: 8px 8px 0 0;
  -webkit-border-radius: 8px 8px 0 0;
  color:#444;
  font-weight: bold;
  height: 36px;
  padding: 0px;
  width: 100%;
}

.infobox {
  color: #000;
  padding: 10px 10px 20px;
}

.infobox p {
  padding: 10px 0 10px;
}

.infobox label {
  display: block;
  float: left;
  font-weight: bold;
  margin: 10px 10px 0 0;
  text-align: right;
  width: 120px;
}

.infobox ul li {
  margin: 15px;
}

.infobox input {
  background: #fff;
  border:1px solid rgb(199, 195, 181);
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  height: 28px;
  padding: 0 10px;
  width: 286px;
  font-size:1.25em;
}

.input {
  margin: 3px 0 10px;
}

.title p {
  line-height: 30px;
  padding: 5px 10px;
}

body form input {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* Login Screen */
/************************************************************************/
#loginwrap {
  margin: 0 auto;
  padding: 150px 0;
  text-align: left;
  width: 960px;
}

#loginlogo {
  float: left;
  height: 190px;
  width: 390px;
}

#loginlogo h1 {
  color: rgb(140, 140, 140);
  text-shadow: 1px 1px 0 rgba(26, 26, 26, 0.6);
  text-align:right;
  font-style:italic;
  padding-top:5px;
}

#loginform {
  float: left;
  padding: 0 20px;
}

#loginform legend {
  color: rgb(127, 196, 67);
  font-size: 1.8em;
  padding-bottom: 15px;
  text-shadow: 1px 1px 0 rgba(26, 26, 26, 0.6);
}

#loginform label {
  color: #fff;
  display: block;
  font-size:1.2em;
  font-weight: bold;
  text-shadow: 0 1px 1px rgba(0,0,0,.25);
}

#loginform label abbr {
  display: none; /*gets rid of useless asterisk*/
}

#loginform .input {
  border: 0px;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  -moz-box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  -webkit-box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  color: #232323;
  font-size: 1.4em;
  margin-bottom: 12px;
  padding: 8px 10px;
  text-shadow: 0 0 1px rgba(0,0,0,.25);
  width: 380px;
}

.cancel-button, .green-submit, .green-submit-small {
  border: 0 solid rgb(15, 18, 21) !important;
  min-height: 38px;
  padding: 7px 15px !important;
  text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
  border: 0;
  color: #fff;
  float: left;
  font-weight: bold;
  font-size: 16px;
  margin: 15px 5px;
}

.green-submit-small {
  padding:5px !important;
  float:none;
  font-size:1em !important;
  height:30px;
  min-height:0px;
  margin:0px 0px 0px 5px;
  vertical-align:top;
}

.green-submit, .green-submit-small {
  background: #5aa52b;
  background: -moz-linear-gradient(center bottom, rgb(27,112,4) 4%, rgb(90,165,43) 58%, rgb(144,207,76) 98%) !important;
  background: -webkit-gradient(linear,left bottom,left top, color-stop(0.04, rgb(27,112,4)), color-stop(0.58, rgb(90,165,43)), color-stop(0.98, rgb(144,207,76))) !important;
}

.cancel-button {
  background: #FF4040;
  background: -moz-linear-gradient(center bottom, rgb(139,35,35) 4%, rgb(255,64,64) 58%, rgb(255,193,193) 98%) !important;
  background: -webkit-gradient(linear,left bottom,left top, color-stop(0.04, rgb(139,35,35)), color-stop(0.58, rgb(255,64,64)), color-stop(0.98, rgb(255,193,193))) !important;
}

.cancel-button:hover, .green-submit:hover, .green-submit-small:hover {
  cursor: pointer;
  border: 0 solid rgb(15, 18, 21) !important;
}

.green-submit:hover, .green-submit-small:hover {
  box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
  -moz-box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
  -webkit-box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
}

.cancel-button:hover {
  box-shadow: inset 1px 1px 5px 1px rgb(255,193,193), 0 1px 2px rgba(0,0,0, 1);
  -moz-box-shadow: inset 1px 1px 5px 1px rgb(255,193,193), 0 1px 2px rgba(0,0,0, 1);
  -webkit-box-shadow: inset 1px 1px 5px 1px rgb(255,193,193), 0 1px 2px rgba(0,0,0, 1);
}
/* ... */

